--- a/lab-text-summarizing-with-chatgpt.ipynb
+++ b/lab-text-summarizing-with-chatgpt.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -385,15 +385,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Review 1: Samsung Tablet S9\n",
+    "rev1 = \"\"\"\n",
+    "Needed a high-performance tablet for work and entertainment,\\\n",
+    "and the Samsung Galaxy Tab S9 was the perfect choice. \\\n",
+    "It has a 12.4-inch AMOLED display, a Snapdragon 8 Gen 2 processor, and 256GB of storage (expandable). \\\n",
+    "The tablet comes in Graphite, Beige, and Silver, and it feels premium in hand. \\\n",
+    "Ordered it from Jarir Bookstore at a great price, and delivery was fast—got it in 3 days. \\\n",
+    "The S Pen is included, making it excellent for drawing and note-taking.\\\n",
+    "Definitely worth it for anyone looking for a high-end tablet!\n",
+    "\"\"\"\n",
+    "\n",
+    "# Review 2: Calvin Klein Women's Handbag\n",
+    "rev2 = \"\"\"\n",
+    "I was looking for a stylish yet practical handbag, and this Calvin Klein bag was exactly what I needed. \\\n",
+    "Ordered it from Amazon US for $148, and it arrived in less than a week! \\\n",
+    "The quality is amazing, with a smooth leather finish and a medium size that fits all my essentials. \\\n",
+    "The bag comes in multiple colors, but I chose the white one, and it looks elegant with any outfit.\\\n",
+    "Super happy with this purchase!\n",
+    "\"\"\"\n",
+    "\n",
+    "# Review 3: Ohuhu Alcohol Markers\n",
+    "rev3 = \"\"\"\n",
+    "I've been using Ohuhu alcohol markers for a while, and they never disappoint! \\\n",
+    "The color range is incredible, offering rich and vibrant shades with smooth blending. \\\n",
+    "The brush tip is soft yet precise, making it easy to create gradients and details. \\\n",
+    "While they are a bit pricey, the quality justifies the cost. \\\n",
+    "Compared to other brands, these markers hold their own and are great for professional artists and beginners alike. \\\n",
+    "Highly recommended!\n",
+    "\"\"\"\n",
+    "\n",
+    "reviews = [rev1, rev2, rev3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summarizing with a word/sentence/character limit: \n",
+      "0 High-performance Samsung Galaxy Tab S9 with 12.4\" AMOLED display, Snapdragon 8 Gen 2 processor, and 256GB storage. Fast delivery. \n",
+      "\n",
+      "1 Stylish and practical Calvin Klein handbag, great quality, smooth leather finish, medium size, elegant white color. Happy purchase! \n",
+      "\n",
+      "2 \"High-quality Ohuhu alcohol markers with vibrant colors, smooth blending, and precise brush tip. Great for artists at any level.\" \n",
+      "\n",
+      "------------------------------------------------\n",
+      "Extracting information relevant to shipping and delivery: \n",
+      "0 Fast delivery from Jarir Bookstore, received the Samsung Galaxy Tab S9 in 3 days. Premium tablet with S Pen included, great for work and entertainment. \n",
+      "\n",
+      "1 Shipping from Amazon US was fast, received the Calvin Klein bag in less than a week. Quality is great, smooth leather finish, and fits all essentials. \n",
+      "\n",
+      "2 Shipping and delivery were not mentioned in the review. \n",
+      "\n",
+      "------------------------------------------------\n",
+      "Summarizing with a focus on price and value: \n",
+      "0 \"Samsung Galaxy Tab S9 offers high performance, premium feel, and included S Pen at a great price from Jarir Bookstore. Worth it for high-end tablet seekers.\" \n",
+      "\n",
+      "1 Great value for money at $148, stylish and practical Calvin Klein handbag with amazing quality, smooth leather finish, and multiple color options. \n",
+      "\n",
+      "2 \n",
+      "```\n",
+      "Ohuhu alcohol markers offer rich colors, smooth blending, and precise tips. Despite being pricey, their quality justifies the cost, making them great for both professionals and beginners.\n",
+      "``` \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Summarize with a word/sentence/character limit\n",
+    "print(\"Summarizing with a word/sentence/character limit: \")\n",
+    "for i in range(len(reviews)):\n",
+    "    prompt = f\"\"\"\n",
+    "    Your task is to generate a short summary of a product \\\n",
+    "    review from an ecommerce site. \n",
+    "\n",
+    "    Summarize the review below, delimited by triple \\\n",
+    "    backticks in at most 20 words. \n",
+    "\n",
+    "    Review: ```{reviews[i]}```\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = get_completion(prompt)\n",
+    "    print(i, response, \"\\n\")\n",
+    "\n",
+    "# Extracting information relevant to shipping and delivery\n",
+    "print(\"------------------------------------------------\")\n",
+    "print(\"Extracting information relevant to shipping and delivery: \")\n",
+    "for i in range(len(reviews)):\n",
+    "    prompt = f\"\"\"\n",
+    "    Your task is to generate a short summary of a product \\\n",
+    "    review from an ecommerce site. \n",
+    "\n",
+    "    From the review below, delimited by triple quotes \\\n",
+    "    extract the information relevant to shipping and \\ \n",
+    "    delivery. Limit to 30 words.\n",
+    "\n",
+    "    Review: ```{reviews[i]}```\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = get_completion(prompt)\n",
+    "    print(i, response, \"\\n\")\n",
+    "\n",
+    "\n",
+    "# Summarize with a focus on price and value\n",
+    "print(\"------------------------------------------------\")\n",
+    "print(\"Summarizing with a focus on price and value: \")\n",
+    "for i in range(len(reviews)):\n",
+    "    prompt = f\"\"\"\n",
+    "    Your task is to generate a short summary of a product \\\n",
+    "    review from an ecommerce site. \n",
+    "\n",
+    "    Summarize the review below, delimited by triple \n",
+    "    backticks, in at most 30 words, and focusing on any aspects \\\n",
+    "    that are relevant to the price and perceived value. \n",
+    "\n",
+    "    Review: ```{reviews[i]}```\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = get_completion(prompt)\n",
+    "    print(i, response, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Report on Text Summarization Findings\n",
+    "\n",
+    "The summarization process successfully captured key details about the products, shipping, and price-value aspects. However, there were some variations that didn’t work well.\n",
+    "\n",
+    "- Observations:\n",
+    "\n",
+    "    - The model effectively summarized product features and key aspects concisely.\n",
+    "\n",
+    "    - It extracted relevant shipping details when available but correctly noted when such information was missing.\n",
+    "\n",
+    "    - The price and value-focused summaries provided a clear assessment of whether the product was worth the cost.\n",
+    "\n",
+    "- Issues & Limitations:\n",
+    "\n",
+    "    - No major hallucinations were observed, but minor rewording could slightly shift emphasis.\n",
+    "\n",
+    "    - The model sometimes excluded secondary but useful details, such as additional product features.\n",
+    "\n",
+    "    - If shipping wasn’t mentioned in a review, the model handled it correctly instead of fabricating details.\n",
+    "\n",
+    "- Key Learnings:\n",
+    "\n",
+    "    - GPT performs well with structured prompts, ensuring focused summarization.\n",
+    "\n",
+    "    - Limiting word count helps in conciseness but may remove small useful details.\n",
+    "\n",
+    "    - Clearly specifying what to extract (price, delivery, etc.) improves accuracy.\n",
+    "\n",
+    "Overall, the summarization approach was effective, with no significant errors, proving GPT is reliable when guided by well-structured prompts."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -407,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
